...
                            isHovering1 = false;
                            showTooltip1 = false;
                          });
                          _timer0?.cancel();
                        },
                        child: _getSidebarItem(
                          Key('network-sidebar-btn'),
                          isHovering1,
                          widget.selectedIndex == 1,
                          docker,
                        ),
                      ),
                    ),
...
