...
  }

  Future<String?> _getPath() async {
    final config = context.read<ConfigRepo>().get();
    late String? path;
    if (config.isTest) {
      path = './test/support/collection1/hello';
    } else {
      if (_currentCollection == null) return null;

      final initialDirectory = _currentCollection!.dir.path;
      path = await context.read<FilePickerI>().saveBruFile(initialDirectory);
      if (path == null) return null;
...
